--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -19,7 +19,7 @@
     "import requests\n",
     "\n",
     "# Import the API key.\n",
-    "weather_api_key = \"dc7d4ca8d3058cd3e2d16bd211e90b68\"\n",
+    "from config import weather_api_key\n",
     "\n",
     "# Starting URL for Weather Map API Call.\n",
     "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key\n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "173e1210",
+   "id": "90a4f752",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "477a2170",
+   "id": "5a6f4c3d",
    "metadata": {},
    "outputs": [],
    "source": [
