--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4ca0de45",
+   "id": "8ea4befc",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "06463c04",
+   "id": "b68600ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "b73b763a",
+   "id": "59bbfe63",
    "metadata": {},
    "outputs": [
     {
@@ -1574,7 +1574,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "a8b1e359",
+   "id": "df03fb96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1583,10 +1583,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4d12e800",
+   "execution_count": 36,
+   "id": "e8f48e0b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "607"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a list for holding the cities.\n",
     "cities = []\n",
@@ -1603,7 +1614,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "id": "8a706a7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# IN THE CELL ABOVE: The citipy module finds the nearest city to the \n",
+    "# latitude and longitude pair with a population of 500 or more."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "id": "81006f48",
    "metadata": {},
    "outputs": [
@@ -1620,7 +1642,7 @@
     "import requests\n",
     "\n",
     "# Import the API key.\n",
-    "weather_api_key = \"dc7d4ca8d3058cd3e2d16bd211e90b68\"\n",
+    "from config import weather_api_key\n",
     "\n",
     "# Starting URL for Weather Map API Call.\n",
     "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key\n",
