--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 389,
    "id": "5192d5b0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=dc7d4ca8d3058cd3e2d16bd211e90b68\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import the requests library.\n",
     "import requests\n",
@@ -22,14 +14,13 @@
     "from config import weather_api_key\n",
     "\n",
     "# Starting URL for Weather Map API Call.\n",
-    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key\n",
-    "print(url)"
+    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "id": "90a4f752",
+   "execution_count": 390,
+   "id": "8f252ca6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,95 +30,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5a6f4c3d",
+   "execution_count": 416,
+   "id": "fd2589fa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the print() function to display the latitude and longitude combinations.\n",
-    "for coordinate in coordinates:\n",
-    "    print(citipy.nearest_city(coordinate[0], coordinate[1]).city_name,\n",
-    "          citipy.nearest_city(coordinate[0], coordinate[1]).country_code)"
+    "# Starting URL for Weather Map API Call.\n",
+    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "38e1e813",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a practice set of random latitude and longitude combinations.\n",
-    "lats = [25.12903645, 25.92017388, 26.62509167, -59.98969384, 37.30571269]\n",
-    "lngs = [-67.59741259, 11.09532135, 74.84233102, -76.89176677, -61.13376282]\n",
-    "lat_lngs = zip(lats, lngs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "id": "e173d2a4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# unpack our lat_lngs zip object into a list. \n",
-    "# This way, we only need to create a set of random latitudes and longitudes once. \n",
-    "# In a new cell in the WeatherPy.ipynb file, add the following code and run the cell."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "id": "36a469e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Add the latitudes and longitudes to a list.\n",
-    "coordinates = list(lat_lngs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "id": "1ae2ba86",
+   "execution_count": 417,
+   "id": "b4441b5e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25.12903645 -67.59741259\n",
-      "25.92017388 11.09532135\n",
-      "26.62509167 74.84233102\n",
-      "-59.98969384 -76.89176677\n",
-      "37.30571269 -61.13376282\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "id": "8576c7ef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Now that we have our ordered pairs of latitudes and longitudes in a list, \n",
-    "# we can iterate through the list of tuples and find the nearest city to those coordinates."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "id": "4b8d43b6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=dc7d4ca8d3058cd3e2d16bd211e90b68&q=Boston\n"
+      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=&q=Boston\n"
      ]
     }
    ],
@@ -139,8 +61,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "id": "468eb947",
+   "execution_count": 418,
+   "id": "7b6b179a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"http://api.openweathermap.org/data/2.5/weather?&q=Boston\"\n",
+    "city = \"boston\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 419,
+   "id": "e2db3819",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build our full api url request ready to request data.\n",
+    "query_url = url + \"appid=\" + api_key + \"&q=\" + city "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 420,
+   "id": "34af858e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# in order to convert api request to jason format . \n",
+    "weather_response = requests.get(query_url)\n",
+    "weather_json = weather_response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 423,
+   "id": "07bbd600",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'cod': 401,\n",
+       " 'message': 'Invalid API key. Please see https://openweathermap.org/faq#error401 for more info.'}"
+      ]
+     },
+     "execution_count": 423,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather_json.keys()\n",
+    "weather_json\n",
+    "# coord - lat and long    weather - weather conditions    wind - wind conditions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 422,
+   "id": "0fde7a64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weather_json.get(\"main\")\n",
+    "# main contains weather information like temp, pressure, humidity, max temp, min. temp in Kelvin!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 398,
+   "id": "a7190cdc",
    "metadata": {},
    "outputs": [
     {
@@ -149,89 +140,82 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 398,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Make a 'Get' request for the city weather.\n",
+    "# Make a 'Get' request for the city weather.  response 200 = O.K.\n",
     "city_weather = requests.get(city_url)\n",
     "city_weather"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "3de3297e",
+   "execution_count": 415,
+   "id": "9fbc28b3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":804,\"main\":\"Clouds\",\"description\":\"overcast clouds\",\"icon\":\"04n\"}],\"base\":\"stations\",\"main\":{\"temp\":31.87,\"feels_like\":22.86,\"temp_min\":29.57,\"temp_max\":34.38,\"pressure\":1031,\"humidity\":72},\"visibility\":10000,\"wind\":{\"speed\":11.5,\"deg\":350},\"clouds\":{\"all\":100},\"dt\":1670715008,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1670673758,\"sunset\":1670706703},\"timezone\":-18000,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+       "{'cod': 401,\n",
+       " 'message': 'Invalid API key. Please see https://openweathermap.org/faq#error401 for more info.'}"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 415,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Get the text of the 'Get' request.\n",
-    "city_weather.text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "id": "7517cca2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 804,\n",
-       "   'main': 'Clouds',\n",
-       "   'description': 'overcast clouds',\n",
-       "   'icon': '04n'}],\n",
-       " 'base': 'stations',\n",
-       " 'main': {'temp': 31.87,\n",
-       "  'feels_like': 22.86,\n",
-       "  'temp_min': 29.57,\n",
-       "  'temp_max': 34.38,\n",
-       "  'pressure': 1031,\n",
-       "  'humidity': 72},\n",
-       " 'visibility': 10000,\n",
-       " 'wind': {'speed': 11.5, 'deg': 350},\n",
-       " 'clouds': {'all': 100},\n",
-       " 'dt': 1670715008,\n",
-       " 'sys': {'type': 2,\n",
-       "  'id': 2013408,\n",
-       "  'country': 'US',\n",
-       "  'sunrise': 1670673758,\n",
-       "  'sunset': 1670706703},\n",
-       " 'timezone': -18000,\n",
-       " 'id': 4930956,\n",
-       " 'name': 'Boston',\n",
-       " 'cod': 200}"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Get the JSON text of the 'Get' request.\n",
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
     "city_weather.json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "731b2e70",
+   "execution_count": 406,
+   "id": "733f1f00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City weather not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Bston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "if city_weather.status_code == 200:\n",
+    "    print(f\"City Weather found.\")\n",
+    "else:\n",
+    "    print(f\"City weather not found.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 408,
+   "id": "af327bce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 412,
+   "id": "c61a3ffe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,15 +225,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 413,
    "id": "837d5df8",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "42.3584 -71.0598 34.38 72 100 11.5\n"
+     "ename": "KeyError",
+     "evalue": "'coord'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_10988\\3930443180.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mboston_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"coord\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"lat\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mlng\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mboston_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"coord\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"lon\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mmax_temp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mboston_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"main\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"temp_max\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mhumidity\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mboston_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"main\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"humidity\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mclouds\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mboston_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"clouds\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"all\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'coord'"
      ]
     }
    ],
@@ -265,21 +253,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "id": "88f748f9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2022-12-10 23:30:08'"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import the datetime module from the datetime library.\n",
     "from datetime import datetime\n",
@@ -291,39 +268,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "id": "7cf1cbbf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1670715008"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "boston_data[\"dt\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "id": "0e7933f5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "42.3584 -71.0598 34.38 72 100 11.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lat = boston_data[\"coord\"][\"lat\"]\n",
     "lng = boston_data[\"coord\"][\"lon\"]\n",
@@ -336,32 +294,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "id": "de62130a",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Beginning Data Retrieval     \n",
-      "-----------------------------\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'cities' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_10988\\581527310.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;31m# Loop through all the cities in the list.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcity\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcities\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[1;31m# Group cities in sets of 50 for logging purposes.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'cities' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import the time library and the datetime module from the datetime library\n",
     "import time\n",
